--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -1,5 +1,4 @@
-<!-- Footer Start -->
-<!---<footer id="footer" class="footer">
+<footer id="footer" class="footer">
     <div class="utf_footer_main">
         <div class="container">
             <div class="row">
@@ -64,7 +63,7 @@
             </div>
         </div>
     </div>
-</footer>-->
+</footer>
 <!-- Footer End -->
 
 <!-- Copyright Start -->
