--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+
 <head>
     <meta name="author" content="">
     <meta name="description" content="">
@@ -16,8 +17,8 @@
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/colorbox.css">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/colorbox.css' %}">
     <!--well -->
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&amp;display=swap" rel="stylesheet">
@@ -29,11 +30,11 @@
 
         {% include 'inc/header.html' %}
         {% block content %}
-      
+
         {% endblock content %}
 
         {% include "inc/footer.html" %}
-    
+
         <!-- Javascript Files -->
         <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
         <script src="{% static 'js/popper.min.js' %}"></script>
@@ -42,6 +43,19 @@
         <script src="{% static 'js/jquery.colorbox.js' %}"></script>
         <script src="{% static 'js/smoothscroll.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171717652-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-171717652-1');
+        </script>
+
     </div>
 </body>
 
