--- a/templates/management/layout.html
+++ b/templates/management/layout.html
@@ -14,6 +14,8 @@
     <link href="{% static 'user/css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'user/css/animate.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'user/css/main.css' %}" rel="stylesheet" media="screen">
+    <script type="text/javascript" src="/static/ckeditor/ckeditor-init.js" data-ckeditor-basepath="/static/ckeditor/ckeditor/" id="ckeditor-init-script"></script>
+    <script type="text/javascript" src="/static/ckeditor/ckeditor/ckeditor.js"></script>
     <link href="{% static 'user/fonts/icomoon/icomoon.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'user/css/circliful/circliful.css' %}">
     <link rel="stylesheet" href="{% static 'user/css/flags/flag-icon-custom.css' %}">
