--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -14,7 +14,7 @@
           <div class="col-lg-8 col-md-12">
             <div class="single-post">
               <div class="post-media post-featured-image"> <img src="{{ post.thumbnail.url }}" class="img-fluid" alt=""> </div>
-              <div class="utf_post_title-area"> <a class="utf_post_cat" href="#">{{ post.post_category }}</a>
+              <div class="utf_post_title-area"> <a class="utf_post_cat" href="#">{{ post.category.name }}</a>
                 <h2 class="utf_post_title">{{ post.title|title }}</h2>
                 <div class="utf_post_meta"> <span class="utf_post_author"> By <a href="#">{{ post.author.username|title }}</a> </span> <span class="utf_post_date"><i class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span> <span class="post-hits"><i class="fa fa-eye"></i>{{ post.views }}</span> <span class="post-comment"><i class="fa fa-comments-o"></i> <a href="#" class="comments-link"><span>{{ post.comments.count }}</span></a></span> </div>
               </div>
@@ -158,17 +158,7 @@
               <div class="widget widget-tags">
                 <h3 class="utf_block_title"><span>Ibyakunzwe</span></h3>
                 <ul class="unstyled clearfix">
-                  <li><a href="#">Business</a></li>
-                  <li><a href="#">Corporate</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Customer</a></li>
-                  <li><a href="#">Money</a></li>
-                  <li><a href="#">Health</a></li>
-                  <li><a href="#">Lifestyles</a></li>
-                  <li><a href="#">Traveling</a></li>
-                  <li><a href="#">Partners</a></li>
-                  <li><a href="#">Wordpress</a></li>
-                  <li><a href="#">Customer</a></li>
+                  <li><a href="{% url 'web:article_tag' 'imikino' %}">Imikino</a></li>
                 </ul>
               </div>
 
