--- a/templates/index.html
+++ b/templates/index.html
@@ -133,18 +133,15 @@
         </div>
     </div>
 </section>
-<!--/ Latest News Area End -->
 
-<!--/ Ad Content Area Start
     <div class="utf_ad_content_area text-center utf_banner_area no-padding">
         <div class="container">
             <div class="row">
-                <div class="col-md-12"> <img class="img-fluid" src="images/banner-ads/ad-content-one.jpg" alt="">
+                <div class="col-md-12"> <img class="img-fluid" src="http://utouchdesign.com/themes/envato/altroz_news/images/banner-ads/ad-content-one.jpg" alt="">
                 </div>
             </div>
         </div>
     </div>
-    Ad Content Area End -->
 
 <!--/ 1rd Block Wrapper Start -->
 <section class="utf_block_wrapper p-bottom-0">
