--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -154,7 +154,7 @@
                 </div>
               </div>
 
-              <div class="widget text-center"> <img class="banner img-fluid" src="images/banner-ads/ad-sidebar.png" alt=""> </div>
+              <div class="widget text-center"> <img class="banner img-fluid" src="http://utouchdesign.com/themes/envato/altroz_news/images/banner-ads/ad-sidebar.png" alt=""> </div>
               <div class="widget widget-tags">
                 <h3 class="utf_block_title"><span>Ibyakunzwe</span></h3>
                 <ul class="unstyled clearfix">
