--- a/templates/index.html
+++ b/templates/index.html
@@ -503,7 +503,8 @@
 <div class="utf_ad_content_area text-center utf_banner_area">
     <div class="container">
         <div class="row">
-            <div class="col-md-12"> <img class="img-fluid" src="{% static 'images/banner-ads/ad-content-two.png' %}"
+            <div class="col-md-12"> 
+                <img class="img-fluid" src="{% static 'images/banner-ads/ad-content-two.png' %}"
                     alt="">
             </div>
         </div>
