--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-    <div class="body-inner">
+    <div>
 
         {% include 'inc/header.html' %}
         {% block content %}
